--- a/06.Model2MVCShop(Presentation+BusinessLogic)/src/main/webapp/css/styling.css
+++ b/06.Model2MVCShop(Presentation+BusinessLogic)/src/main/webapp/css/styling.css
@@ -20,7 +20,7 @@
     transition-property:background-color;
     transition-duration:0.2s;
 }
-.button:clicked {
+.button:hover {
     background-color: #0056b3;
 }
 .item.button a{
@@ -30,4 +30,9 @@
     height:calc(100% ); /* a 태그의 높이를 div의 100%로 설정합니다. */
     text-align: center; /* 텍스트를 가운데 정렬합니다. */
     line-height: 3;
+}
+
+.max-size{
+    max-width:600px;
+    max-height:600px;
 }
