--- a/Myshop08/src/main/webapp/css/layout/left.css
+++ b/Myshop08/src/main/webapp/css/layout/left.css
@@ -1,6 +1,12 @@
 
 /* 이미지 보더라인 삭제 */
 IMG {  border-style: none}
+@font-face {
+	font-family: 'SANJUGotgam';
+	src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2112@1.0/SANJUGotgam.woff') format('woff');
+	font-weight: normal;
+	font-style: normal;
+}
 
 /* 스크롤바 정의 */
 BODY {
@@ -12,14 +18,7 @@ scrollbar-track-color: #F7F7F7;
 scrollbar-darkshadow-color: #ffffff;
 scrollbar-shadow-color: #B8C4C5;}
 
-
-a.menu{ font-size: 9pt; font-family: 굴림체; color: #ff0000; text-decoration: none; }
-
 /* 링크 속성 */
-a:link {  color: #000000;text-decoration: none; cursor:hand}
-a:hover {  color: #fff;text-decoration: none; }
-a:active {  color: #000000; text-decoration: none;}
-a:visited {  color: #000000; text-decoration: none;}
 
 .container {
   display: grid;
@@ -28,10 +27,11 @@ a:visited {  color: #000000; text-decoration: none;}
   gap: 10px; /* 아이템 간격 */
 }
 .item {
-  background-color: #f0f0f0;
+	background-color: #a19999;
+	color:#000000;
 }
 .button {
-    color: #fff !important;
+	font-family: 'SANJUGotgam';
     text-decoration: none;
     text-align:center;
     border-radius: 5px;
@@ -39,15 +39,17 @@ a:visited {  color: #000000; text-decoration: none;}
     cursor: pointer;
     transition-property:background-color;
     transition-duration:0.2s;
+	box-shadow: 5px 5px 5px 0 rgba(0, 0, 0, 0.15);
+	/* 수평 오프셋, 수직 오프셋, 흐림 반경, 확산 거리, 색상 */
 }
 .button:hover {
     background-color: #0056b3;
 }
-.item.button a{
+div.item.button{
 	color:#000000;
     display: block; /* a 태그를 블록 레벨 요소로 만듭니다. */
     width:calc(100%); /* a 태그의 너비를 div의 100%로 설정합니다. */
-    height:calc(100% ); /* a 태그의 높이를 div의 100%로 설정합니다. */
+    height:calc(100%); /* a 태그의 높이를 div의 100%로 설정합니다. */
     text-align: center; /* 텍스트를 가운데 정렬합니다. */
     line-height: 3;
 }
