--- a/Myshop08/src/main/webapp/css/styling.css
+++ b/Myshop08/src/main/webapp/css/styling.css
@@ -33,6 +33,6 @@
 }
 
 .max-size{
-    max-width:600px;
-    max-height:600px;
+    max-width:100px !important;
+    max-height:100px !important;
 }
