--- a/Myshop08/src/main/webapp/css/listProduct.css
+++ b/Myshop08/src/main/webapp/css/listProduct.css
@@ -2,25 +2,25 @@
 #searchAsc{
 	/*display: none;*/
 }
-.button {
-    display: inline-block;
-    background-color: #a19999;
-    color: #000000;
-    cursor: pointer;
-    border-radius: 5px;
-    transition: opacity 0.2s ease;/*property duration timing-function*/
-}
-.button.keyword {
-    width: 100%;  /* 요소의 너비 */
-    height: 100%; /* 요소의 높이 */
-    padding: 0px 20px; /* 내부 여백 */
-    border: 1.920px solid #000000; /* 테두리 */
-    margin: 1.920px; /* 외부 여백 */
-}
+/*.button {*/
+/*    display: inline-block;*/
+/*    background-color: #a19999;*/
+/*    color: #000000;*/
+/*    cursor: pointer;*/
+/*    border-radius: 5px;*/
+/*    transition: opacity 0.2s ease;!*property duration timing-function*!*/
+/*}*/
+/*.button.keyword {*/
+/*    width: 100%;  !* 요소의 너비 *!*/
+/*    height: 100%; !* 요소의 높이 *!*/
+/*    padding: 0px 20px; !* 내부 여백 *!*/
+/*    border: 1.920px solid #000000; !* 테두리 *!*/
+/*    margin: 1.920px; !* 외부 여백 *!*/
+/*}*/
 
-.button:hover {
-    opacity: 0.8;
-}
+/*.button:hover {*/
+/*    opacity: 0.8;*/
+/*}*/
 
 .clickableSpan{
     color:blue;
@@ -39,9 +39,9 @@
 }
 
 /* 드롭다운 메뉴 스타일 */
-/*.ui-helper-hidden-accessible{*/
-/*    display:none;*/
-/*}*/
+.ui-helper-hidden-accessible{
+    display:none;
+}
 /*ul.ui-autocomplete>li.ui-menu-item>div.ui-menu-item-wrapper.ui-state-active {*/
 /*    background-color: wheat !important; !* 활성 상태 시 배경색 변경 *!*/
 /*}*/
