--- a/Myshop08/src/main/webapp/css/loading.css
+++ b/Myshop08/src/main/webapp/css/loading.css
@@ -69,7 +69,9 @@
 .loading-container,
 .loading {
     height: 20px;
-    position: relative;
+    position: fixed;
+    bottom: 40px;
+    right : 20px;
     width: 20px;
     border-radius: 100%;
 }
@@ -79,19 +81,21 @@
 
 .loading {
     border: 2px solid transparent;
-    border-color: transparent #333 transparent #333;
-    -moz-animation: rotate-loading 1.5s linear 0s infinite normal;
+    /*border-color: transparent #333 transparent #333;*/
+    border-color: transparent #E45635 transparent #456594;
+    -moz-animation: rotate-loading 0.5s linear 0s infinite normal;
     -moz-transform-origin: 50% 50%;
-    -o-animation: rotate-loading 1.5s linear 0s infinite normal;
+    -o-animation: rotate-loading 0.5s linear 0s infinite normal;
     -o-transform-origin: 50% 50%;
-    -webkit-animation: rotate-loading 1.5s linear 0s infinite normal;
+    -webkit-animation: rotate-loading 0.5s linear 0s infinite normal;
     -webkit-transform-origin: 50% 50%;
-    animation: rotate-loading 1.5s linear 0s infinite normal;
+    animation: rotate-loading 0.5s linear 0s infinite normal;
     transform-origin: 50% 50%;
 }
 
 .loading-container:hover .loading {
-    border-color: transparent #E45635 transparent #E45635;
+    /*border-color: transparent #E45635 transparent #E45635;*/
+    border-color: transparent #456594 transparent #E45635;
 }
 .loading-container:hover .loading,
 .loading-container .loading {
@@ -107,7 +111,7 @@
     -o-animation: loading-text-opacity 2s linear 0s infinite normal;
     -webkit-animation: loading-text-opacity 2s linear 0s infinite normal;
     animation: loading-text-opacity 2s linear 0s infinite normal;
-    color: #333;
+    color: #456594;
     font-family: "Helvetica Neue", "Helvetica", "arial";
     font-size: 10px;
     font-weight: bold;
